[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/paddle/Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/right_pallete.png" type="Texture" id=2]
[ext_resource path="res://scenes/ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/wall/Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 217 )

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="UIContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UIContainer"]
margin_right = 600.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 1 )

[node name="Score" type="Label" parent="UIContainer"]
anchor_left = 7.5
anchor_right = 7.5
margin_left = -22.0
margin_top = 12.0
margin_right = 22.0
margin_bottom = 28.0
text = "0 - 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaddleContainer" type="Node2D" parent="."]

[node name="Palette" parent="PaddleContainer" instance=ExtResource( 1 )]
position = Vector2( 20, 207 )
side = 0

[node name="PaletteRight" parent="PaddleContainer" instance=ExtResource( 1 )]
position = Vector2( 580, 204 )

[node name="Sprite" parent="PaddleContainer/PaletteRight" index="0"]
texture = ExtResource( 2 )

[node name="BallContainer" type="Node2D" parent="."]

[node name="Ball" parent="BallContainer" instance=ExtResource( 3 )]
position = Vector2( 300, 200 )

[node name="WallContainer" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Top" parent="WallContainer" instance=ExtResource( 4 )]

[node name="Bottom" parent="WallContainer" instance=ExtResource( 4 )]
position = Vector2( 0, 418 )
wall_side = 1

[node name="Left" parent="WallContainer" instance=ExtResource( 4 )]
position = Vector2( -56, 144 )
wall_side = 2

[node name="CollisionShape2D" parent="WallContainer/Left" index="0"]
position = Vector2( 47, 55 )
shape = SubResource( 1 )

[node name="Right" parent="WallContainer" instance=ExtResource( 4 )]
position = Vector2( 562, 144 )
wall_side = 3

[node name="CollisionShape2D" parent="WallContainer/Right" index="0"]
position = Vector2( 47, 55 )
shape = SubResource( 1 )

[node name="BallStart" type="Position2D" parent="."]
position = Vector2( 300, 200 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="PaddleContainer/PaletteRight"]
[editable path="WallContainer/Left"]
[editable path="WallContainer/Right"]
